--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+body{
+
+    background: rgba(128, 128, 128, 0.22);
+}
+header{
+    background: rgba(128, 128, 128, 0.22);
+    z-index:999;
+}
+
+
 header{
     padding-top:5px;
 }
@@ -9,4 +19,18 @@ header{
  .carousel-inner img {
     width: 100%;
     height: 100%;
+}
+
+header + section{
+    margin-top:145px;
+}
+
+.services article{
+    height:500px;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+section.services article div{
+   background-color:  #868e9640 !important;
 }
